objects/ASI_CRM_ContractVolumeIncentive__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AchievedBtl__c</fullName>
        <label>Achieved (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CashInc__c</fullName>
        <label>Cash Inc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ContractTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Target</label>
        <referenceTo>ASI_CRM_ContractTarget__c</referenceTo>
        <relationshipLabel>Contract Volume Incentives</relationshipLabel>
        <relationshipName>Contract_Volume_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Contract Volume Incentives</relationshipLabel>
        <relationshipName>Contract_Volume_Incentives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exclude__c</fullName>
        <description>Exclude in Report or Calculation</description>
        <formula>AND(
 OR(ISBLANK(ASI_CRM_FOC__c), ASI_CRM_FOC__c = 0),
 OR(ISBLANK(ASI_CRM_CashInc__c), ASI_CRM_CashInc__c = 0),
 OR(ISBLANK(ASI_CRM_Total__c), ASI_CRM_Total__c = 0)
)</formula>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC__c</fullName>
        <label>FOC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Point_Per_Bottle__c</fullName>
        <label>Incentive Point Per Bottle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group_ID__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_MFM_Item_Group__c</formula>
        <label>Item Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_MFM_Item_Group__r.Name</formula>
        <label>Item Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDECOA__c</fullName>
        <label>JDE COA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MinSPBtl__c</fullName>
        <label>Min SP (Btl)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PackFactor__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Pack_Factor__c</formula>
        <label>Pack Factor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packaging_Size__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Packaging_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packaging Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packing_Description__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_FOC_Packing_Description__c</formula>
        <label>Packing Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product__c</fullName>
        <formula>ASI_CRM_SKU__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKUCode__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_MFM_SKU_Code__c</formula>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Description__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_MFM_SKU_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM MO Volume Incentive</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MO CRM (SKU)</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.ASI_HK_CRM_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM MO Volume Incentive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Contract Volume Incentives</relationshipLabel>
        <relationshipName>Contract_Volume_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SetupCode__c</fullName>
        <label>Setup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Contract Volume Incentive</label>
    <nameField>
        <displayFormat>CVI{00000000}</displayFormat>
        <label>Contract Volume Incentive ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Volume Incentives</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MO_Volume_Incentive</fullName>
        <active>true</active>
        <label>ASI CRM MO Volume Incentive</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_VolumeIncentive</fullName>
        <active>true</active>
        <label>Contract Volume Incentive (MY)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_MO_ContractChgChk</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$User.BypassVR__c != TRUE, 
	CONTAINS($RecordType.DeveloperName, &apos;ASI_CRM_MO&apos;),
	CONTAINS(ASI_CRM_Contract__r.RecordType.DeveloperName, &apos;ASI_CRM_MO&apos;),
	NOT(ISNEW()),
	ISCHANGED(ASI_CRM_Contract__c)
)</errorConditionFormula>
        <errorMessage>Cannot change the contract on an existing contract cost entry</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_MO_StatusChk_ContractIncentive</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$User.BypassVR__c != TRUE, 
	CONTAINS($RecordType.DeveloperName, &apos;ASI_CRM_MO&apos;),
	CONTAINS(ASI_CRM_Contract__r.RecordType.DeveloperName, &apos;ASI_CRM_MO&apos;),
	TEXT(ASI_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) != &apos;Draft&apos;,
	NOT(ASI_CRM_Contract__r.ASI_CRM_Is_Processing__c = true)
)</errorConditionFormula>
        <errorMessage>You can only add/modify contract incentive on a &apos;Draft&quot; contract</errorMessage>
    </validationRules>
</CustomObject>